# CrisisLensCGsre

./: .gitignore  .replit  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  start.sh  tsconfig.json  vite.config.ts
forecast-service/: db.py  facilities.db  main.py  requirements.txt
forecast-service/routes/: facilities.py  forecast_sse.py
public/data/historical/: bdb_weather.csv  bjp_weather.csv  bld_weather.csv  bls_weather.csv  bmt_weather.csv  brp_weather.csv  bst_weather.csv  chhattisgarh-districts.geojson  dhm_weather.csv  drg_weather.csv  dtw_weather.csv  durg_health.csv  durg_water_scarcity.csv  durg_weather.csv  gpm_weather.csv  grb_weather.csv  jjg_weather.csv  jsp_weather.csv  kbd_weather.csv  knk_weather.csv  kra_weather.csv  krb_weather.csv  mgl_weather.csv  msm_weather.csv  (+7 more)
scripts/: downloadAllDistrictWeather.mjs  update_historical.py
src/: App.tsx  index.css  main.tsx
src/components/: AlertModal.tsx  ForecastPanel.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
src/config/: emailjs.ts
src/context/: AuthContext.tsx  DataContext.tsx
src/contexts/: AuthContext.tsx
src/data/: cgDistricts.ts  facilities.ts  lgd.ts
src/engine/: predictionModel.ts  scoringMetrics.ts
src/hooks/: useAlertEmail.ts  useFacilitiesDB.ts  useHistoricalData.ts  useWeather.ts
src/pages/: AccuracyBacktest.tsx  ApiDocs.tsx  Dashboard.tsx  FacilitiesDB.tsx  FutureRisk.tsx  HistoricalAnalytics.tsx  LiveMap.tsx  Login.tsx  Predictions.tsx  Register.tsx  SchoolRiskForm.tsx
src/utils/: mlForecast.ts  vulnerabilityFactor.ts
