[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
